--- a/index.html
+++ b/index.html
@@ -10,38 +10,44 @@
 <body>
     <div class="container">
         <div class="menu">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span><i class="fas fa-home"></i></span>
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span><i class="fas fa-address-card"></i></span>
-                        Service
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span><i class="fas fa-cog"></i></span>
-                        News
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span><i class="fas fa-address-book"></i></span>
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span><i class="fas fa-comments-alt-dollar"></i></span>
-                        Contact
-                    </a>
-                </li>
-            </ul>
+            <input type="checkbox" name="open" id="open">
+            <label for="open" class="open">
+                <i class="fas fa-bars"></i>
+            </label>
+            <div class="mobile">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span><i class="fas fa-home"></i></span>
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><i class="fas fa-address-card"></i></span>
+                            Service
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><i class="fas fa-cog"></i></span>
+                            News
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><i class="fas fa-address-book"></i></span>
+                            Blog
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span><i class="fas fa-comments-alt-dollar"></i></span>
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="content">
             <div class="img">
